[gd_scene load_steps=16 format=2]

[ext_resource path="res://kitchen/Pantry Item.tscn" type="PackedScene" id=1]
[ext_resource path="res://jam assets/Foods/Food_Assets/52_gingerbreadman.png" type="Texture" id=2]
[ext_resource path="res://jam assets/Foods/Food_Assets/40_eggsalad.png" type="Texture" id=3]
[ext_resource path="res://jam assets/Foods/Food_Assets/48_garlicbread.png" type="Texture" id=4]
[ext_resource path="res://jam assets/Foods/Food_Assets/69_meatball.png" type="Texture" id=5]
[ext_resource path="res://jam assets/Foods/Food_Assets/94_spaghetti.png" type="Texture" id=6]
[ext_resource path="res://jam assets/Foods/Food_Assets/07_bread.png" type="Texture" id=7]
[ext_resource path="res://jam assets/Foods/Food_Assets/65_loafbread.png" type="Texture" id=8]
[ext_resource path="res://jam assets/Foods/Food_Assets/95_steak.png" type="Texture" id=9]
[ext_resource path="res://jam assets/Foods/Food_Assets/23_cheesecake_dish.png" type="Texture" id=10]
[ext_resource path="res://jam assets/Foods/Food_Assets/91_strawberrycake_dish.png" type="Texture" id=11]
[ext_resource path="res://jam assets/Foods/Food_Assets/47_fruitcake_dish.png" type="Texture" id=12]
[ext_resource path="res://jam assets/Foods/Food_Assets/31_chocolatecake_dish.png" type="Texture" id=13]
[ext_resource path="res://kitchen/PantrySelection.gd" type="Script" id=14]
[ext_resource path="res://kitchen/Inventory Item.tscn" type="PackedScene" id=15]

[node name="PantrySelection" type="Control"]
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_right = 350.0
margin_bottom = 238.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ingredients" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ingredients Label" type="Label" parent="Ingredients"]
margin_left = 11.9692
margin_top = 6.92957
margin_right = 84.9692
margin_bottom = 20.9296
text = "Ingredients"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Ingredients"]
margin_left = 8.0
margin_top = 32.0
margin_right = 176.0
margin_bottom = 209.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Ingredients/ScrollContainer"]
show_behind_parent = true
margin_right = 168.0
margin_bottom = 177.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Ingredients/ScrollContainer/VBoxContainer"]
margin_right = 168.0
margin_bottom = 41.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Cold Spegetti" parent="Ingredients/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 53.0
margin_bottom = 41.0
grow_horizontal = 0
grow_vertical = 0

[node name="TextureRect" parent="Ingredients/ScrollContainer/VBoxContainer/HBoxContainer/Cold Spegetti" index="0"]
texture = ExtResource( 6 )

[node name="Meatball" parent="Ingredients/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 57.0
margin_right = 110.0
margin_bottom = 41.0

[node name="TextureRect" parent="Ingredients/ScrollContainer/VBoxContainer/HBoxContainer/Meatball" index="0"]
texture = ExtResource( 5 )

[node name="Steak" parent="Ingredients/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 114.0
margin_right = 168.0
margin_bottom = 41.0

[node name="TextureRect" parent="Ingredients/ScrollContainer/VBoxContainer/HBoxContainer/Steak" index="0"]
texture = ExtResource( 9 )

[node name="HBoxContainer2" type="HBoxContainer" parent="Ingredients/ScrollContainer/VBoxContainer"]
margin_top = 45.0
margin_right = 168.0
margin_bottom = 86.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Egg" parent="Ingredients/ScrollContainer/VBoxContainer/HBoxContainer2" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 53.0
margin_bottom = 41.0

[node name="TextureRect" parent="Ingredients/ScrollContainer/VBoxContainer/HBoxContainer2/Egg" index="0"]
texture = ExtResource( 3 )

[node name="Bread" parent="Ingredients/ScrollContainer/VBoxContainer/HBoxContainer2" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 57.0
margin_right = 110.0
margin_bottom = 41.0

[node name="TextureRect" parent="Ingredients/ScrollContainer/VBoxContainer/HBoxContainer2/Bread" index="0"]
texture = ExtResource( 7 )

[node name="Garlic Bread" parent="Ingredients/ScrollContainer/VBoxContainer/HBoxContainer2" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 114.0
margin_right = 168.0
margin_bottom = 41.0

[node name="TextureRect" parent="Ingredients/ScrollContainer/VBoxContainer/HBoxContainer2/Garlic Bread" index="0"]
texture = ExtResource( 4 )

[node name="HBoxContainer3" type="HBoxContainer" parent="Ingredients/ScrollContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 168.0
margin_bottom = 131.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Ginger Breadman" parent="Ingredients/ScrollContainer/VBoxContainer/HBoxContainer3" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 53.0
margin_bottom = 41.0

[node name="TextureRect" parent="Ingredients/ScrollContainer/VBoxContainer/HBoxContainer3/Ginger Breadman" index="0"]
texture = ExtResource( 2 )

[node name="Loaf Bread" parent="Ingredients/ScrollContainer/VBoxContainer/HBoxContainer3" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 57.0
margin_right = 110.0
margin_bottom = 41.0

[node name="TextureRect" parent="Ingredients/ScrollContainer/VBoxContainer/HBoxContainer3/Loaf Bread" index="0"]
texture = ExtResource( 8 )

[node name="Cake" parent="Ingredients/ScrollContainer/VBoxContainer/HBoxContainer3" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 114.0
margin_right = 168.0
margin_bottom = 41.0

[node name="TextureRect" parent="Ingredients/ScrollContainer/VBoxContainer/HBoxContainer3/Cake" index="0"]
texture = ExtResource( 11 )

[node name="HBoxContainer4" type="HBoxContainer" parent="Ingredients/ScrollContainer/VBoxContainer"]
margin_top = 135.0
margin_right = 168.0
margin_bottom = 177.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Cake2" parent="Ingredients/ScrollContainer/VBoxContainer/HBoxContainer4" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 53.0
margin_bottom = 42.0

[node name="TextureRect" parent="Ingredients/ScrollContainer/VBoxContainer/HBoxContainer4/Cake2" index="0"]
texture = ExtResource( 10 )

[node name="Cake3" parent="Ingredients/ScrollContainer/VBoxContainer/HBoxContainer4" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 57.0
margin_right = 110.0
margin_bottom = 42.0

[node name="TextureRect" parent="Ingredients/ScrollContainer/VBoxContainer/HBoxContainer4/Cake3" index="0"]
texture = ExtResource( 13 )

[node name="Cake4" parent="Ingredients/ScrollContainer/VBoxContainer/HBoxContainer4" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 114.0
margin_right = 168.0
margin_bottom = 42.0

[node name="TextureRect" parent="Ingredients/ScrollContainer/VBoxContainer/HBoxContainer4/Cake4" index="0"]
texture = ExtResource( 12 )

[node name="Inventory" type="Control" parent="."]
margin_left = 198.964
margin_top = 6.92957
margin_right = 238.964
margin_bottom = 46.9296
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inventory Label" type="Label" parent="Inventory"]
text = "Inventory"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Inventory"]
margin_top = 25.0
margin_right = 135.0
margin_bottom = 207.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Inventory/ScrollContainer"]
margin_right = 135.0
margin_bottom = 182.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Inventory/ScrollContainer/VBoxContainer"]
margin_right = 135.0
margin_bottom = 42.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Inventory Item" parent="Inventory/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 15 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 42.0
margin_bottom = 42.0

[node name="Inventory Item2" parent="Inventory/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 15 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 46.0
margin_right = 88.0
margin_bottom = 42.0

[node name="Inventory Item3" parent="Inventory/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 15 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 92.0
margin_right = 135.0
margin_bottom = 42.0

[node name="HBoxContainer2" type="HBoxContainer" parent="Inventory/ScrollContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 135.0
margin_bottom = 89.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Inventory Item" parent="Inventory/ScrollContainer/VBoxContainer/HBoxContainer2" instance=ExtResource( 15 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 42.0
margin_bottom = 43.0

[node name="Inventory Item2" parent="Inventory/ScrollContainer/VBoxContainer/HBoxContainer2" instance=ExtResource( 15 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 46.0
margin_right = 88.0
margin_bottom = 43.0

[node name="Inventory Item3" parent="Inventory/ScrollContainer/VBoxContainer/HBoxContainer2" instance=ExtResource( 15 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 92.0
margin_right = 135.0
margin_bottom = 43.0

[node name="HBoxContainer3" type="HBoxContainer" parent="Inventory/ScrollContainer/VBoxContainer"]
margin_top = 93.0
margin_right = 135.0
margin_bottom = 135.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Inventory Item" parent="Inventory/ScrollContainer/VBoxContainer/HBoxContainer3" instance=ExtResource( 15 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 42.0
margin_bottom = 42.0

[node name="Inventory Item2" parent="Inventory/ScrollContainer/VBoxContainer/HBoxContainer3" instance=ExtResource( 15 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 46.0
margin_right = 88.0
margin_bottom = 42.0

[node name="Inventory Item3" parent="Inventory/ScrollContainer/VBoxContainer/HBoxContainer3" instance=ExtResource( 15 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 92.0
margin_right = 135.0
margin_bottom = 42.0

[node name="HBoxContainer4" type="HBoxContainer" parent="Inventory/ScrollContainer/VBoxContainer"]
margin_top = 139.0
margin_right = 135.0
margin_bottom = 182.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Inventory Item" parent="Inventory/ScrollContainer/VBoxContainer/HBoxContainer4" instance=ExtResource( 15 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 42.0
margin_bottom = 43.0

[node name="Inventory Item2" parent="Inventory/ScrollContainer/VBoxContainer/HBoxContainer4" instance=ExtResource( 15 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 46.0
margin_right = 88.0
margin_bottom = 43.0

[node name="Inventory Item3" parent="Inventory/ScrollContainer/VBoxContainer/HBoxContainer4" instance=ExtResource( 15 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 92.0
margin_right = 135.0
margin_bottom = 43.0

[connection signal="button_down" from="Ingredients/ScrollContainer/VBoxContainer/HBoxContainer/Cold Spegetti" to="." method="_on_Cold_Spegetti_button_down"]
[connection signal="button_down" from="Ingredients/ScrollContainer/VBoxContainer/HBoxContainer/Meatball" to="." method="_on_Meatball_button_down"]
[connection signal="button_down" from="Ingredients/ScrollContainer/VBoxContainer/HBoxContainer/Steak" to="." method="_on_Steak_button_down"]
[connection signal="button_down" from="Ingredients/ScrollContainer/VBoxContainer/HBoxContainer2/Egg" to="." method="_on_Egg_button_down"]
[connection signal="button_down" from="Ingredients/ScrollContainer/VBoxContainer/HBoxContainer2/Bread" to="." method="_on_Bread_button_down"]
[connection signal="button_up" from="Ingredients/ScrollContainer/VBoxContainer/HBoxContainer2/Garlic Bread" to="." method="_on_Garlic_Bread_button_up"]
[connection signal="button_down" from="Ingredients/ScrollContainer/VBoxContainer/HBoxContainer3/Ginger Breadman" to="." method="_on_Ginger_Breadman_button_down"]
[connection signal="button_down" from="Ingredients/ScrollContainer/VBoxContainer/HBoxContainer3/Loaf Bread" to="." method="_on_Loaf_Bread_button_down"]
[connection signal="button_down" from="Ingredients/ScrollContainer/VBoxContainer/HBoxContainer3/Cake" to="." method="_on_Cake_button_down"]
[connection signal="button_down" from="Ingredients/ScrollContainer/VBoxContainer/HBoxContainer4/Cake2" to="." method="_on_Cake2_button_down"]
[connection signal="button_down" from="Ingredients/ScrollContainer/VBoxContainer/HBoxContainer4/Cake3" to="." method="_on_Cake3_button_down"]
[connection signal="button_down" from="Ingredients/ScrollContainer/VBoxContainer/HBoxContainer4/Cake4" to="." method="_on_Cake4_button_down"]

[editable path="Ingredients/ScrollContainer/VBoxContainer/HBoxContainer/Cold Spegetti"]
[editable path="Ingredients/ScrollContainer/VBoxContainer/HBoxContainer/Meatball"]
[editable path="Ingredients/ScrollContainer/VBoxContainer/HBoxContainer/Steak"]
[editable path="Ingredients/ScrollContainer/VBoxContainer/HBoxContainer2/Egg"]
[editable path="Ingredients/ScrollContainer/VBoxContainer/HBoxContainer2/Bread"]
[editable path="Ingredients/ScrollContainer/VBoxContainer/HBoxContainer2/Garlic Bread"]
[editable path="Ingredients/ScrollContainer/VBoxContainer/HBoxContainer3/Ginger Breadman"]
[editable path="Ingredients/ScrollContainer/VBoxContainer/HBoxContainer3/Loaf Bread"]
[editable path="Ingredients/ScrollContainer/VBoxContainer/HBoxContainer3/Cake"]
[editable path="Ingredients/ScrollContainer/VBoxContainer/HBoxContainer4/Cake2"]
[editable path="Ingredients/ScrollContainer/VBoxContainer/HBoxContainer4/Cake3"]
[editable path="Ingredients/ScrollContainer/VBoxContainer/HBoxContainer4/Cake4"]
[editable path="Inventory/ScrollContainer/VBoxContainer/HBoxContainer/Inventory Item"]
